--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -43,6 +43,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/style.css">
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/nivo-lightbox/nivo-lightbox.css">
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/nivo-lightbox/default.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -141,16 +142,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-23-free-high-speed-nodes.htm" title="VPN设备 | 3月23日20.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月23日20.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-17-node-share.htm" title="VPN设备 | 4月17日20.5M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 4月17日20.5M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-92172.htm" title="3.	Springmvc架构">3.	Springmvc架构</a></li>
-                        <li class="py-2"><a href="/news/article-85614.htm" title="北京领养狗的有哪些地方啊（北京领养狗狗的地方在哪里）">北京领养狗的有哪些地方啊（北京领养狗狗的地方在哪里）</a></li>
-                        <li class="py-2"><a href="/news/article-96658.htm" title="动物疫苗价格查询（动物疫苗价格查询表）">动物疫苗价格查询（动物疫苗价格查询表）</a></li>
-                        <li class="py-2"><a href="/news/article-72483.htm" title="python内置函数有哪些？">python内置函数有哪些？</a></li>
+                        <li class="py-2"><a href="/news/article-67292.htm" title="有限体积法求解一维非稳态对流扩散方程">有限体积法求解一维非稳态对流扩散方程</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="VPN设备 | 4月9日21M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 4月9日21M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-high-speed-nodes.htm" title="VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-77204.htm" title="常州宠颐生动物医院地址电话（常州宠物医院24小时营业）">常州宠颐生动物医院地址电话（常州宠物医院24小时营业）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-10-free-subscribe-node.htm" title="VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-8-node-share-links.htm" title="VPN设备 | 3月8日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 3月8日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-97348.htm" title="快手上的拼多多电商是真的吗（拼多多上快手带货是真的吗）">快手上的拼多多电商是真的吗（拼多多上快手带货是真的吗）</a></li>
+                        <li class="py-2"><a href="/news/article-71828.htm" title="狗粮加工厂设备有哪些（狗粮加工厂需要什么手续）">狗粮加工厂设备有哪些（狗粮加工厂需要什么手续）</a></li>
                         <li class="py-2"><a href="/news/article-71831.htm" title="做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）">做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）</a></li>
-                        <li class="py-2"><a href="/news/article-79953.htm" title="动物医院在哪个位置好一点（动物医院价目表）">动物医院在哪个位置好一点（动物医院价目表）</a></li>
-                        <li class="py-2"><a href="/news/article-84887.htm" title="今年公务员国考人数（今年国考人数多少）">今年公务员国考人数（今年国考人数多少）</a></li>
-                        <li class="py-2"><a href="/news/article-94457.htm" title="天津宠物救助站领养宠物流程 天津宠物救助站领养宠物流程图">天津宠物救助站领养宠物流程 天津宠物救助站领养宠物流程图</a></li>
+                        <li class="py-2"><a href="/news/article-83459.htm" title="mysql中时间的储存方式_如何在MySQL 中存储日期？">mysql中时间的储存方式_如何在MySQL 中存储日期？</a></li>
                     </ul>
     </div>
 </div>
@@ -162,7 +163,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">57</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
