--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -40,6 +40,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/style.css">
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/nivo-lightbox/nivo-lightbox.css">
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/nivo-lightbox/default.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -109,6 +110,66 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-23">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-23-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月23日22.8M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-23-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月23日22.8M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、欧洲、香港、韩国、新加坡、美国、加拿大等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-22">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-22-node-share-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月22日18M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享" src="/uploads/20241222-1/82977253972095a20fc67c366bb8fa6d.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-22-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月22日18M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、加拿大、香港、欧洲、美国、日本、韩国等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-21">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-21-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月21日19.3M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-21-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月21日19.3M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、新加坡、日本、美国、香港、韩国、欧洲等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-20">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-20-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月20日21.1M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-20-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月20日21.1M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、新加坡、美国、韩国、日本、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-19">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-19-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -199,68 +260,8 @@
                                     这一次的节点更新覆盖了香港、美国、日本、欧洲、新加坡、韩国、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-13">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-13-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-13-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、加拿大、美国、日本、韩国、香港、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-12">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-12-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月12日18.9M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-12-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月12日18.9M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、美国、香港、欧洲等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-11">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-11-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月11日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-11-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月11日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、韩国、新加坡、欧洲、加拿大、香港、日本等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-10">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-10-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-10-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、欧洲、美国、新加坡、香港、韩国、加拿大等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -269,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-high-speed-nodes.htm" title="VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 3月17日22M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-94457.htm" title="天津宠物救助站领养宠物流程 天津宠物救助站领养宠物流程图">天津宠物救助站领养宠物流程 天津宠物救助站领养宠物流程图</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-13-free-node-subscribe-links.htm" title="VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-6-free-v2ray-subscribe.htm" title="VPN设备 | 3月6日21M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 3月6日21M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-73821.htm" title="长春宠物医院排名（长春良心的宠物医院）">长春宠物医院排名（长春良心的宠物医院）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" title="VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-93645.htm" title="宠物粮食厂家联系方式 宠物粮食厂家联系方式电话">宠物粮食厂家联系方式 宠物粮食厂家联系方式电话</a></li>
-                        <li class="py-2"><a href="/news/article-81351.htm" title="领养协议书范本宠物狗怎么写（领养协议书范本 宠物）">领养协议书范本宠物狗怎么写（领养协议书范本 宠物）</a></li>
-                        <li class="py-2"><a href="/news/article-98794.htm" title="八公宠物领养网站官网（八公宠物领养网站官网入口）">八公宠物领养网站官网（八公宠物领养网站官网入口）</a></li>
-                        <li class="py-2"><a href="/news/article-85613.htm" title="动物医院诊疗活动范围（动物医院价目表）">动物医院诊疗活动范围（动物医院价目表）</a></li>
+                        <li class="py-2"><a href="/news/article-66660.htm" title="用Pandas 处理大数据的3种超级方法">用Pandas 处理大数据的3种超级方法</a></li>
+                        <li class="py-2"><a href="/news/article-84165.htm" title="原型模式在实际开发中的应用BeanUtils">原型模式在实际开发中的应用BeanUtils</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-30-free-v2ray-subscribe.htm" title="VPN设备 | 3月30日18.2M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 3月30日18.2M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-79951.htm" title="mysql中如何存储日期数据">mysql中如何存储日期数据</a></li>
+                        <li class="py-2"><a href="/news/article-96658.htm" title="动物疫苗价格查询（动物疫苗价格查询表）">动物疫苗价格查询（动物疫苗价格查询表）</a></li>
+                        <li class="py-2"><a href="/news/article-75175.htm" title="读取spring的配置来定义常量">读取spring的配置来定义常量</a></li>
+                        <li class="py-2"><a href="/news/article-71831.htm" title="做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）">做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-node-share.htm" title="VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-89954.htm" title="开宠物店累不累人（一般开宠物店挣不挣）">开宠物店累不累人（一般开宠物店挣不挣）</a></li>
+                        <li class="py-2"><a href="/news/article-89236.htm" title="Apache Hudi 如何加速传统的批处理模式">Apache Hudi 如何加速传统的批处理模式</a></li>
                     </ul>
     </div>
 </div>
@@ -290,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">57</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
