--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -40,6 +40,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/style.css">
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/nivo-lightbox/nivo-lightbox.css">
     <link rel="stylesheet" type="text/css" href="/assets/website/css/v2rayunode/nivo-lightbox/default.css">
+    <link rel="stylesheet" href="/assets/website/css/G.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -109,6 +110,66 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、香港、欧洲、日本、美国、新加坡等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、新加坡、美国、加拿大、韩国、香港、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-01">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/a6739d732704eaa23f08687f69677fcf.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、美国、加拿大、香港、韩国、欧洲、新加坡等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-31">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享" src="/uploads/20241222-1/d5724d9f45324a2206331adc0791a09b.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、韩国、美国、香港、欧洲、加拿大、新加坡等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-03-30">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-3-30-free-v2ray-subscribe.htm" class="xcblog-blog-url">
@@ -199,68 +260,8 @@
                                     这一次的节点更新覆盖了欧洲、加拿大、美国、韩国、日本、新加坡、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-24">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-24-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-24-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、韩国、新加坡、日本、加拿大、美国、香港等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-23">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-23-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月23日20.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-23-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月23日20.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、日本、香港、加拿大、美国、新加坡、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-22">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-22-free-v2ray.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/ae775f129fc26565e44171425f168292.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-22-free-v2ray.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、韩国、加拿大、欧洲、美国、香港、日本等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-21-node-share-links.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月21日18.9M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/ae775f129fc26565e44171425f168292.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-21-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月21日18.9M/S|免费VPN/V2ray/Clash/Shadowrocket/SSR免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、美国、韩国、加拿大、日本、香港、欧洲等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -269,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-73821.htm" title="长春宠物医院排名（长春良心的宠物医院）">长春宠物医院排名（长春良心的宠物医院）</a></li>
-                        <li class="py-2"><a href="/news/article-92172.htm" title="3.	Springmvc架构">3.	Springmvc架构</a></li>
-                        <li class="py-2"><a href="/news/article-87041.htm" title="兽药安泰又叫什么（兽药安泰又叫什么名字）">兽药安泰又叫什么（兽药安泰又叫什么名字）</a></li>
-                        <li class="py-2"><a href="/news/article-84888.htm" title="宠物粮食加工厂挣钱吗现在多少钱 宠物粮食加工厂挣钱吗现在多少钱一个月">宠物粮食加工厂挣钱吗现在多少钱 宠物粮食加工厂挣钱吗现在多少钱一个月</a></li>
-                        <li class="py-2"><a href="/news/article-72485.htm" title="动物免疫接种前应做哪些准备工作（动物免疫接种要注意什么）">动物免疫接种前应做哪些准备工作（动物免疫接种要注意什么）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-13-node-share.htm" title="VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-97348.htm" title="快手上的拼多多电商是真的吗（拼多多上快手带货是真的吗）">快手上的拼多多电商是真的吗（拼多多上快手带货是真的吗）</a></li>
                         <li class="py-2"><a href="/news/article-86326.htm" title="vue实现列表垂直无缝滚动_vue.js">vue实现列表垂直无缝滚动_vue.js</a></li>
-                        <li class="py-2"><a href="/news/article-89235.htm" title="常见 几种 git操作代码回退的方法">常见 几种 git操作代码回退的方法</a></li>
-                        <li class="py-2"><a href="/news/article-66661.htm" title="开动物医院什么资质可以开药（开动物医院什么资质可以开药店）">开动物医院什么资质可以开药（开动物医院什么资质可以开药店）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-13-free-node-subscribe-links.htm" title="VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-84887.htm" title="今年公务员国考人数（今年国考人数多少）">今年公务员国考人数（今年国考人数多少）</a></li>
+                        <li class="py-2"><a href="/news/article-89954.htm" title="开宠物店累不累人（一般开宠物店挣不挣）">开宠物店累不累人（一般开宠物店挣不挣）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-24-free-v2ray-subscribe.htm" title="VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-92893.htm" title="猫粮狗粮生产加工（猫粮狗粮生产加工工艺）">猫粮狗粮生产加工（猫粮狗粮生产加工工艺）</a></li>
+                        <li class="py-2"><a href="/news/article-70525.htm" title="动物疫苗品牌排名（动物疫苗品牌排名前十名）">动物疫苗品牌排名（动物疫苗品牌排名前十名）</a></li>
+                        <li class="py-2"><a href="/news/article-74488.htm" title="爬虫系列：爬虫验证码识别_在线工具">爬虫系列：爬虫验证码识别_在线工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-node-share.htm" title="VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 3月13日19.3M/S|免费VPN/SSR/V2ray/Shadowrocket/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-66026.htm" title="宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪">宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪</a></li>
                     </ul>
     </div>
 </div>
@@ -290,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">57</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
